[project]
name = "ddpss"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.2",
    "certifi==2025.10.5",
    "chardet==7.4.3",
    "click==8.1.8",
    "Flask==3.1.3",
    "gunicorn==23.0.0",
    "idna==3.15",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "requests==2.33.0",
    "soupsieve==2.8.4",
    "urllib3==2.7.0",
    "Werkzeug==3.1.6",
]

[tool.vercel]
entrypoint = "run:app"
